--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend-starter",
+  "name": "street-cred-frontend",
   "version": "1.0.0",
   "private": false,
   "license": "MIT",
@@ -36,8 +36,7 @@
     "mobx-react-lite": "^3.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-intl": "^5.21.0",
-    "unfetch": "^4.2.0"
+    "react-intl": "^5.21.0"
   },
   "devDependencies": {
     "@craco/craco": "^6.4.0",
