--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "mobx": "^6.3.6",
     "mobx-persist-store": "^1.0.4",
     "mobx-react-lite": "^3.2.2",
