Commit methods to work with eth metamask

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,11 @@
   "compilerOptions": {
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
+    "typeRoots": [
+      "node_modules/@types",
+      "node_modules/@typescript-eslint",
+      "@types"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
