--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intl": "^5.21.0",
+    "react-router-dom": "^5.3.0",
     "web3": "^1.6.1",
     "web3-eth-personal": "^1.6.1"
   },
@@ -48,6 +49,7 @@
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@types/react-router-dom": "^5.3.2",
     "autoprefixer": "^9",
     "cross-env": "7.0.3",
     "eslint": "^7.32.0",
