--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@metamask/detect-provider": "^1.2.0",
     "@metamask/eth-sig-util": "^4.0.0",
     "axios": "^0.24.0",
+    "ethers": "^5.5.2",
+    "metamask-react": "^2.1.2",
     "mobx": "^6.3.6",
     "mobx-persist-store": "^1.0.4",
     "mobx-react-lite": "^3.2.2",
