--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@metamask/detect-provider": "^1.2.0",
     "@metamask/eth-sig-util": "^4.0.0",
     "axios": "^0.24.0",
+    "copy-to-clipboard": "^3.3.1",
     "ethers": "^5.5.2",
     "metamask-react": "^2.1.2",
     "mobx": "^6.3.6",
