--- a/package.json
+++ b/package.json
@@ -43,9 +43,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intl": "^5.21.0",
-    "react-router-dom": "^5.3.0",
-    "web3": "^1.6.1",
-    "web3-eth-personal": "^1.6.1"
+    "react-router-dom": "^5.3.0"
   },
   "devDependencies": {
     "@craco/craco": "^6.4.0",
