switch to the new tech stack

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,15 +15,18 @@
     "@typescript-eslint",
     "prettier",
     "sort-imports-es6-autofix",
-    "import"
+    "import",
+    "no-relative-import-paths"
   ],
   "extends": [
     "eslint:recommended",
     "plugin:react/jsx-runtime",
     "plugin:@typescript-eslint/recommended",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "plugin:valtio/recommended"
   ],
   "rules": {
+    "no-relative-import-paths/no-relative-import-paths": "error",
     "@typescript-eslint/no-floating-promises": "error",
     "require-await": "error",
     "react-hooks/exhaustive-deps": "error",
