--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "ethers": "^5.5.2",
     "metamask-react": "^2.1.2",
     "preact": "^10.6.4",
-    "react-router-dom": "^6.1.1"
+    "react-router-dom": "^6.1.1",
+    "valtio": "^1.2.7"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.1.5",
