--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "esnext",
     "lib": ["dom", "dom.iterable", "esnext"],
-    "typeRoots": [
-      "node_modules/@types",
-      "node_modules/@typescript-eslint",
-      "@types"
-    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -19,8 +14,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
-    "baseUrl": "src"
+    "jsx": "preserve",
+    "jsxFactory": "h",
+    "jsxFragmentFactory": "Fragment",
+    "baseUrl": "src",
+    "types": ["vite/client"]
   },
   "include": ["src"]
 }
