--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     ]
   },
   "dependencies": {
-    "@metamask/detect-provider": "^1.2.0",
     "@metamask/eth-sig-util": "^4.0.0",
+    "@metamask/providers": "^8.1.1",
     "@vitejs/plugin-react": "^1.1.1",
     "axios": "^0.24.0",
     "copy-to-clipboard": "^3.3.1",
