--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@metamask/providers": "^8.1.1",
     "@vitejs/plugin-react": "^1.1.1",
     "axios": "^0.24.0",
+    "buffer": "^6.0.3",
     "copy-to-clipboard": "^3.3.1",
     "ethers": "^5.5.2",
     "preact": "^10.6.4",
