--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "copy-to-clipboard": "^3.3.1",
     "ethers": "^5.5.3",
     "preact": "^10.6.4",
+    "react-countdown": "^2.3.2",
     "react-router-dom": "^6.2.1",
     "valtio": "^1.2.7"
   },
