--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
 VITE_BACKEND=http://localhost:1337
 VITE_DOSU_BACKEND=http://localhost:1338
 VITE_DOSU_FRONTEND=http://localhost:3000
+ENCRYPT_KEY=123
