--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "cross-env NODE_ENV=production tsc && vite build",
     "pretty": "prettier --check src",
     "lint": "yarn pretty && eslint --max-warnings 0 --ext ts,tsx,json src",
-    "generate-css-types": "tailwindcss-classnames -o src/classnames/tailwind.ts && prettier --write src/classnames/tailwind.ts",
-    "prestart": "yarn generate-css-types",
-    "prebuild": "yarn generate-css-types"
+    "postinstall": "yarn prepare",
+    "prepare": "yarn generate-css-types",
+    "generate-css-types": "tailwindcss-classnames -o src/classnames/tailwind.ts && prettier --write src/classnames/tailwind.ts"
   },
   "browserslist": {
     "production": [
