--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "axios": "^0.24.0",
     "buffer": "^6.0.3",
     "copy-to-clipboard": "^3.3.1",
+    "dayjs": "^1.10.7",
     "ethers": "^5.5.3",
     "preact": "^10.6.4",
-    "react-countdown": "^2.3.2",
     "react-router-dom": "^6.2.1",
     "valtio": "^1.2.7"
   },
