--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,7 @@ VITE_BACKEND=http://localhost:1337
 VITE_DOSU_BACKEND=http://localhost:1338
 VITE_DOSU_FRONTEND=http://localhost:3000
 VITE_ENCRYPT_KEY=123
+VITE_ETH_NETWORK=ropsten
+VITE_INFURA_ID=123
+VITE_FORTMATIC_KEY=pk_test_123
+VITE_BITSKI_CLIENT_ID=123
