--- a/package.json
+++ b/package.json
@@ -46,10 +46,12 @@
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.1.7",
+    "@toruslabs/torus-embed": "^1.20.4",
     "@types/node": "^17.0.8",
     "@types/react": "^17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
+    "agent-base": "^6.0.2",
     "autoprefixer": "^10.4.2",
     "cross-env": "^7.0.3",
     "eslint": "^8.6.0",
