reduced as much as I can

--- a/.env.sample
+++ b/.env.sample
@@ -5,4 +5,5 @@ VITE_ENCRYPT_KEY=123
 VITE_ETH_NETWORK=ropsten
 VITE_INFURA_ID=123
 VITE_FORTMATIC_KEY=pk_test_123
+VITE_FORMATIC_RPC=https://rpc-mainnet.maticvigil.com
 VITE_BITSKI_CLIENT_ID=123
