--- a/package.json
+++ b/package.json
@@ -27,21 +27,14 @@
     "@metamask/eth-sig-util": "^4.0.0",
     "@metamask/providers": "^8.1.1",
     "@vitejs/plugin-react": "^1.1.4",
-    "@walletconnect/web3-provider": "^1.7.1",
     "axios": "^0.24.0",
-    "bitski": "^0.13.1",
     "buffer": "^6.0.3",
     "copy-to-clipboard": "^3.3.1",
     "ethers": "^5.5.3",
-    "events": "^3.3.0",
-    "fortmatic": "^2.2.1",
     "preact": "^10.6.4",
-    "process": "^0.11.10",
     "react-router-dom": "^6.2.1",
     "secure-ls": "^1.2.6",
-    "util": "^0.12.4",
     "valtio": "^1.2.7",
-    "walletlink": "^2.5.0",
     "web3modal": "^1.9.5"
   },
   "devDependencies": {
@@ -51,8 +44,10 @@
     "@types/react": "^17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
+    "@walletconnect/web3-provider": "^1.7.1",
     "agent-base": "^6.0.2",
     "autoprefixer": "^10.4.2",
+    "bitski": "^0.13.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
@@ -63,6 +58,8 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "eslint-plugin-valtio": "^0.4.1",
+    "events": "^3.3.0",
+    "fortmatic": "^2.2.1",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "react-scripts": "^5.0.0",
@@ -71,7 +68,8 @@
     "tailwindcss-classnames": "^3.0.1",
     "typescript": "^4.5.4",
     "vite": "^2.7.10",
-    "vite-tsconfig-paths": "^3.3.17"
+    "vite-tsconfig-paths": "^3.3.17",
+    "walletlink": "^2.5.0"
   },
   "packageManager": "yarn@3.1.1"
 }
