--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "prettier": "^2.5.1",
     "react-scripts": "^5.0.0",
     "rollup-plugin-visualizer": "^5.6.0",
+    "stream-browserify": "^3.0.0",
     "tailwindcss": "^3.0.23",
     "tailwindcss-classnames": "^3.0.2",
     "typescript": "^4.5.5",
