--- a/package.json
+++ b/package.json
@@ -26,28 +26,31 @@
   "dependencies": {
     "@metamask/eth-sig-util": "^4.0.0",
     "@metamask/providers": "^8.1.1",
+    "@toruslabs/torus-embed": "^1.20.4",
     "@vitejs/plugin-react": "^1.2.0",
+    "@walletconnect/web3-provider": "^1.7.3",
     "axios": "^0.26.0",
+    "bitski": "^0.13.1",
+    "buffer": "^6.0.3",
     "copy-to-clipboard": "^3.3.1",
     "ethers": "^5.5.4",
+    "events": "^3.3.0",
+    "fortmatic": "^2.2.1",
     "preact": "^10.6.6",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "^6.2.2",
     "secure-ls": "^1.2.6",
     "valtio": "^1.3.1",
+    "walletlink": "^2.5.0",
     "web3modal": "^1.9.5"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.1.7",
-    "@toruslabs/torus-embed": "^1.20.4",
-    "@types/node": "^17.0.8",
+    "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
-    "@walletconnect/web3-provider": "^1.7.1",
     "agent-base": "^6.0.2",
     "autoprefixer": "^10.4.2",
-    "bitski": "^0.13.1",
-    "buffer": "^6.0.3",
     "cross-env": "^7.0.3",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.4.0",
@@ -58,8 +61,6 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "eslint-plugin-valtio": "^0.4.2",
-    "events": "^3.3.0",
-    "fortmatic": "^2.2.1",
     "postcss": "^8.4.7",
     "prettier": "^2.5.1",
     "react-scripts": "^5.0.0",
@@ -67,10 +68,9 @@
     "stream-browserify": "^3.0.0",
     "tailwindcss": "^3.0.23",
     "tailwindcss-classnames": "^3.0.2",
-    "typescript": "^4.5.5",
-    "vite": "^2.8.5",
-    "vite-tsconfig-paths": "^3.4.1",
-    "walletlink": "^2.5.0"
+    "typescript": "^4.6.2",
+    "vite": "^2.8.6",
+    "vite-tsconfig-paths": "^3.4.1"
   },
   "packageManager": "yarn@3.1.1"
 }
