--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "web3modal": "^1.9.5"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
     "@preact/preset-vite": "^2.1.7",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
