--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "start": "vite",
     "build": "cross-env NODE_ENV=production tsc && vite build",
-    "preview": "vite preview",
     "pretty": "prettier --check src",
     "lint": "yarn pretty && eslint --max-warnings 0 --ext ts,tsx,json src",
     "generate-css-types": "tailwindcss-classnames -o src/classnames/tailwind.ts && prettier --write src/classnames/tailwind.ts",
@@ -30,10 +29,8 @@
     "@walletconnect/web3-provider": "^1.7.3",
     "axios": "^0.26.0",
     "bitski": "^0.13.1",
-    "buffer": "^6.0.3",
     "copy-to-clipboard": "^3.3.1",
     "ethers": "^5.5.4",
-    "events": "^3.3.0",
     "fortmatic": "^2.2.1",
     "preact": "^10.6.6",
     "react-router-dom": "^6.2.2",
@@ -44,7 +41,6 @@
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
-    "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
     "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@preact/preset-vite": "^2.1.7",
     "@types/node": "^17.0.21",
@@ -65,6 +61,7 @@
     "postcss": "^8.4.7",
     "prettier": "^2.5.1",
     "react-scripts": "^5.0.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-visualizer": "^5.6.0",
     "tailwindcss": "^3.0.23",
     "tailwindcss-classnames": "^3.0.2",
