functional, but circomlibjs is not working

--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,5 @@ VITE_INFURA_ID=123
 VITE_FORTMATIC_KEY=pk_test_123
 VITE_FORMATIC_RPC=https://rpc-mainnet.maticvigil.com
 VITE_BITSKI_CLIENT_ID=123
+VITE_DERIVATIVE_ADDRESS=0x3366F052a729A3e840943964768D8cc676Df332E
+VITE_PROOF_API=https://verify.streetcred.one
