--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ node_modules
 .env.*.local
 stats.html
 
+# Contract types files
+src/helpers/abiTypes
+
 # Log files
 npm-debug.log*
 yarn-debug.log*
