--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "vite",
+    "start": "yarn prepare && vite",
     "build": "cross-env NODE_ENV=production tsc && vite build",
     "pretty": "prettier --check src",
     "lint": "yarn pretty && eslint --max-warnings 0 --ext ts,tsx,json src",
+    "postinstall": "yarn prepare",
+    "prepare": "yarn generate-abi-types & yarn generate-css-types",
     "generate-css-types": "tailwindcss-classnames -o src/classnames/tailwind.ts && prettier --write src/classnames/tailwind.ts",
-    "prestart": "yarn generate-css-types",
-    "prebuild": "yarn generate-css-types"
+    "generate-abi-types": "typechain --target=ethers-v5 'src/types/invites-abi.json' --out-dir 'src/helpers/abiTypes'"
   },
   "browserslist": {
     "production": [
@@ -27,11 +28,14 @@
     "@toruslabs/torus-embed": "^1.20.4",
     "@vitejs/plugin-react": "^1.2.0",
     "@walletconnect/web3-provider": "^1.7.3",
+    "@zk-kit/incremental-merkle-tree": "^0.4.3",
     "axios": "^0.26.0",
     "bitski": "^0.13.1",
+    "circomlibjs": "^0.0.8",
     "copy-to-clipboard": "^3.3.1",
     "ethers": "^5.5.4",
     "fortmatic": "^2.2.1",
+    "merkletreejs": "^0.2.31",
     "preact": "^10.6.6",
     "react-router-dom": "^6.2.2",
     "secure-ls": "^1.2.6",
@@ -43,6 +47,7 @@
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
     "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@preact/preset-vite": "^2.1.7",
+    "@typechain/ethers-v5": "^10.0.0",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
@@ -65,6 +70,7 @@
     "rollup-plugin-visualizer": "^5.6.0",
     "tailwindcss": "^3.0.23",
     "tailwindcss-classnames": "^3.0.2",
+    "typechain": "^8.0.0",
     "typescript": "^4.6.2",
     "vite": "^2.8.6",
     "vite-tsconfig-paths": "^3.4.1"
