--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vitejs/plugin-react": "^1.2.0",
     "@walletconnect/web3-provider": "^1.7.3",
     "@zk-kit/incremental-merkle-tree": "^0.4.3",
+    "assert": "^2.0.0",
     "axios": "^0.26.0",
     "bitski": "^0.13.1",
     "circomlibjs": "^0.0.8",
