--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     ]
   },
   "dependencies": {
+    "@noble/secp256k1": "^1.5.5",
     "@toruslabs/torus-embed": "^1.20.4",
     "@vitejs/plugin-react": "^1.2.0",
     "@walletconnect/web3-provider": "^1.7.3",
     "@zk-kit/incremental-merkle-tree": "^0.4.3",
     "axios": "^0.26.0",
     "bitski": "^0.13.1",
-    "circomlibjs": "^0.1.2",
+    "circomlibjs": "^0.0.8",
     "copy-to-clipboard": "^3.3.1",
     "ethers": "^5.5.4",
     "fortmatic": "^2.2.1",
