with changes from main

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "copy-to-clipboard": "^3.3.1",
     "ethers": "^5.5.4",
     "fortmatic": "^2.2.1",
+    "keccak256": "^1.0.6",
     "merkletreejs": "^0.2.31",
     "preact": "^10.6.6",
     "react-router-dom": "^6.2.2",
