--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,9 @@ node_modules
 stats.html
 
 # Contract types
-src/helpers/abiTypes
+src/helpers/invitesAbi
+src/helpers/derivativeAbi
+
 
 
 # Log files
