--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "license": "MIT",
   "scripts": {
     "start": "yarn prepare && vite",
-    "build": "cross-env NODE_ENV=production tsc && vite build",
+    "build": "yarn prepare && cross-env NODE_ENV=production tsc && vite build",
     "pretty": "prettier --check src",
     "lint": "yarn pretty && eslint --max-warnings 0 --ext ts,tsx,json src",
-    "postinstall": "yarn prepare",
     "prepare": "yarn generate-invites-types & yarn generate-derivative-types & yarn generate-css-types",
     "generate-css-types": "tailwindcss-classnames -o src/classnames/tailwind.ts && prettier --write src/classnames/tailwind.ts",
     "generate-invites-types": "typechain --target=ethers-v5 'src/types/invites-abi.json' --out-dir 'src/helpers/invitesAbi'",
