Fix ... not defined errors

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "yarn prepare && vite",
     "build": "yarn prepare && cross-env NODE_ENV=production tsc && vite build",
+    "preview": "yarn build && yarn vite preview",
     "pretty": "prettier --check src",
     "lint": "yarn pretty && eslint --max-warnings 0 --ext ts,tsx,json src",
     "postinstall": "yarn prepare",
@@ -49,6 +50,7 @@
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
     "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@preact/preset-vite": "^2.1.7",
+    "@rollup/plugin-inject": "^4.0.4",
     "@typechain/ethers-v5": "^10.0.0",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
@@ -56,6 +58,7 @@
     "@typescript-eslint/parser": "^5.13.0",
     "assert": "^2.0.0",
     "autoprefixer": "^10.4.2",
+    "buffer": "^6.0.3",
     "cross-env": "^7.0.3",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.4.0",
@@ -69,7 +72,6 @@
     "postcss": "^8.4.7",
     "prettier": "^2.5.1",
     "react-scripts": "^5.0.0",
-    "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-visualizer": "^5.6.0",
     "tailwindcss": "^3.0.23",
     "tailwindcss-classnames": "^3.0.2",
