Mint using private address and infura

--- a/.env.sample
+++ b/.env.sample
@@ -10,3 +10,4 @@ VITE_BITSKI_CLIENT_ID=123
 VITE_ETH_NETWORK=ropsten
 VITE_INVITES_CONTRACT_ADDRESS=0x37C897117256cA9053965FC9F522e2F05f40AdF1
 VITE_SC_DERIVATIVE_ADDRESS=0x028d3d9187F32818F2CA8828955235d4063d5f2C
+VITE_INFURA_PROJECT_ID=123
