--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     ]
   },
   "dependencies": {
+    "@headlessui/react": "^1.5.0",
     "@noble/secp256k1": "^1.5.5",
     "@toruslabs/torus-embed": "^1.20.4",
     "@vitejs/plugin-react": "^1.2.0",
