--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "keccak256": "^1.0.6",
     "preact": "^10.6.6",
     "react-router-dom": "^6.2.2",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "secure-ls": "^1.2.6",
     "valtio": "^1.3.1",
     "walletlink": "^2.5.0",
