--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "copy-to-clipboard": "^3.3.1",
     "ethers": "^5.6.2",
     "fortmatic": "^2.2.1",
-    "preact": "^10.6.6",
-    "react-router-dom": "^6.2.2",
+    "preact": "^10.7.1",
+    "react-router-dom": "^6.3.0",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "secure-ls": "^1.2.6",
     "valtio": "^1.5.2",
@@ -70,7 +70,7 @@
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "eslint-plugin-valtio": "^0.4.2",
     "postcss": "^8.4.12",
-    "prettier": "2.6.2",
+    "prettier": "^2.6.2",
     "react-scripts": "^5.0.0",
     "rollup-plugin-visualizer": "^5.6.0",
     "tailwindcss": "^3.0.23",
