--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "pretty": "prettier --check src",
     "lint": "yarn pretty && eslint --max-warnings 0 --ext ts,tsx,json src",
     "postinstall": "yarn prepare",
-    "prepare": "yarn generate-invites-types & yarn generate-derivative-types & yarn generate-css-types",
+    "prepare": "yarn generate-invites-types & yarn generate-derivative-types & yarn generate-scledger-types & yarn generate-css-types",
     "generate-css-types": "tailwindcss-classnames -o src/classnames/tailwind.ts && prettier --write src/classnames/tailwind.ts",
-    "generate-invites-types": "typechain --target=ethers-v5 'src/types/invites-abi.json' --out-dir 'src/helpers/invitesAbi'",
-    "generate-derivative-types": "typechain --target=ethers-v5 'src/types/derivative-abi.json' --out-dir 'src/helpers/derivativeAbi'"
+    "generate-invites-types": "typechain --target=ethers-v5 'src/types/invites-abi.json' --out-dir 'src/helpers/abiTypes/invitesAbi'",
+    "generate-derivative-types": "typechain --target=ethers-v5 'src/types/derivative-abi.json' --out-dir 'src/helpers/abiTypes/derivativeAbi'",
+    "generate-scledger-types": "typechain --target=ethers-v5 'src/types/scledger-abi.json' --out-dir 'src/helpers/abiTypes/scLedgerAbi'"
   },
   "browserslist": {
     "production": [
