--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,4 @@ VITE_BITSKI_CLIENT_ID=123
 VITE_ETH_NETWORK=ropsten
 VITE_INVITES_CONTRACT_ADDRESS=0x587b4A62FB556C5928e4E5B617fB06386339c2cd
 VITE_SC_DERIVATIVE_ADDRESS=0x028d3d9187F32818F2CA8828955235d4063d5f2C
+VITE_SC_LEDGER_CONTRACT_ADDRESS=0x6d638815402a6B2085ad9d6327C27d7796628851
