--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bitski": "^0.13.1",
     "circomlibjs": "^0.0.8",
     "copy-to-clipboard": "^3.3.1",
+    "eth-rpc-errors": "^4.0.3",
     "ethers": "^5.5.4",
     "fortmatic": "^2.2.1",
     "keccak256": "^1.0.6",
@@ -56,7 +57,7 @@
     "@types/react": "^17.0.39",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
-    "assert": "^2.0.0",
+    "assert-browserify": "^2.0.0",
     "autoprefixer": "^10.4.2",
     "buffer": "^6.0.3",
     "cross-env": "^7.0.3",
