--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bitski": "^0.14.0",
     "circomlibjs": "^0.0.8",
     "copy-to-clipboard": "^3.3.1",
+    "eth-rpc-errors": "^4.0.3",
     "ethers": "^5.6.2",
     "fortmatic": "^2.2.1",
     "preact": "^10.7.1",
@@ -57,7 +58,7 @@
     "@types/react": "^17.0.43",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
-    "assert": "^2.0.0",
+    "assert-browserify": "^2.0.0",
     "autoprefixer": "^10.4.4",
     "buffer": "^6.0.3",
     "cross-env": "^7.0.3",
