--- a/.env.sample
+++ b/.env.sample
@@ -2,8 +2,8 @@ VITE_ENCRYPT_KEY=123
 VITE_ETH_NETWORK=ropsten
 VITE_INFURA_ID=123
 VITE_FORTMATIC_KEY=pk_test_123
-VITE_FORMATIC_RPC=https://rpc-mainnet.maticvigil.com
 VITE_BITSKI_CLIENT_ID=123
+VITE_APP_NAME=Street-Cred
 VITE_ETH_NETWORK=ropsten
 VITE_INVITES_CONTRACT_ADDRESS=0x587b4A62FB556C5928e4E5B617fB06386339c2cd
 VITE_SC_DERIVATIVE_ADDRESS=0x028d3d9187F32818F2CA8828955235d4063d5f2C
