--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     ]
   },
   "dependencies": {
+    "@coinbase/wallet-sdk": "^3.0.6",
     "@noble/secp256k1": "^1.5.5",
     "@toruslabs/torus-embed": "^1.21.0",
     "@vitejs/plugin-react": "^1.3.0",
@@ -45,7 +46,6 @@
     "rollup-plugin-node-polyfills": "^0.2.1",
     "secure-ls": "^1.2.6",
     "valtio": "^1.5.2",
-    "walletlink": "^2.5.0",
     "web3modal": "^1.9.6"
   },
   "devDependencies": {
