--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     ]
   },
   "dependencies": {
+    "@coinbase/wallet-sdk": "^3.0.6",
     "@headlessui/react": "^1.5.0",
     "@noble/secp256k1": "^1.5.5",
     "@toruslabs/torus-embed": "^1.21.0",
