--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "fortmatic": "^2.2.1",
     "preact": "^10.7.1",
     "react-router-dom": "^6.3.0",
+    "react-toastify": "^8.2.0",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "secure-ls": "^1.2.6",
     "valtio": "^1.5.2",
