--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -7,7 +7,8 @@ on:
 jobs:
   compile-code:
     runs-on: ubuntu-latest
-
+    env:
+      NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
     steps:
       - uses: actions/checkout@v2
       - name: Install modules
