--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,4 @@ VITE_INFURA_ID=123
 VITE_APP_NAME=Street-Cred
 VITE_BITSKI_CLIENT_ID=123
 VITE_SC_LEDGER_CONTRACT_ADDRESS=0x6d638815402a6B2085ad9d6327C27d7796628851
+VITE_ETH_HTTP_URL=https://eth.streetcred.one
