--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "preview": "yarn build && yarn vite preview",
     "pretty": "prettier --check src",
     "lint": "yarn pretty && eslint --max-warnings 0 --ext ts,tsx,json src",
-    "postinstall": "yarn prepare",
-    "prepare": "yarn generate-invites-types & yarn generate-derivative-types & yarn generate-scledger-types & yarn generate-css-types",
+    "postinstall": "yarn generate-css-types",
     "generate-css-types": "tailwindcss-classnames -o src/classnames/tailwind.ts && prettier --write src/classnames/tailwind.ts"
   },
   "browserslist": {
