--- a/package.json
+++ b/package.json
@@ -3,17 +3,13 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "yarn prepare && vite",
-    "build": "yarn prepare && cross-env NODE_ENV=production tsc && vite build",
+    "start": "yarn generate-css-types && vite",
+    "build": "yarn generate-css-types && cross-env NODE_ENV=production tsc && vite build",
     "preview": "yarn build && yarn vite preview",
     "pretty": "prettier --check src",
     "lint": "yarn pretty && eslint --max-warnings 0 --ext ts,tsx,json src",
-    "postinstall": "yarn prepare",
-    "prepare": "yarn generate-invites-types & yarn generate-derivative-types & yarn generate-scledger-types & yarn generate-css-types",
-    "generate-css-types": "tailwindcss-classnames -o src/classnames/tailwind.ts && prettier --write src/classnames/tailwind.ts",
-    "generate-invites-types": "typechain --target=ethers-v5 'src/types/invites-abi.json' --out-dir 'src/helpers/abiTypes/invitesAbi'",
-    "generate-derivative-types": "typechain --target=ethers-v5 'src/types/derivative-abi.json' --out-dir 'src/helpers/abiTypes/derivativeAbi'",
-    "generate-scledger-types": "typechain --target=ethers-v5 'src/types/scledger-abi.json' --out-dir 'src/helpers/abiTypes/scLedgerAbi'"
+    "postinstall": "yarn generate-css-types",
+    "generate-css-types": "tailwindcss-classnames -o src/classnames/tailwind.ts && prettier --write src/classnames/tailwind.ts"
   },
   "browserslist": {
     "production": [
@@ -28,26 +24,24 @@
     ]
   },
   "dependencies": {
-    "@coinbase/wallet-sdk": "^3.0.6",
-    "@noble/secp256k1": "^1.5.5",
-    "@toruslabs/torus-embed": "^1.21.0",
-    "@vitejs/plugin-react": "^1.3.0",
+    "@big-whale-labs/street-cred-ledger-contract": "^0.0.8",
+    "@coinbase/wallet-sdk": "^3.0.8",
+    "@toruslabs/torus-embed": "^1.22.2",
     "@walletconnect/web3-provider": "^1.7.7",
     "@zk-kit/incremental-merkle-tree": "^0.4.3",
     "axios": "^0.26.1",
-    "bitski": "^0.14.0",
-    "circomlibjs": "^0.0.8",
+    "bitski": "^0.14.1",
+    "circomlibjs": "^0.1.2",
     "copy-to-clipboard": "^3.3.1",
     "eth-rpc-errors": "^4.0.3",
-    "ethers": "^5.6.2",
+    "ethers": "^5.6.4",
     "fortmatic": "^2.2.1",
     "preact": "^10.7.1",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^8.2.0",
-    "rollup-plugin-node-polyfills": "^0.2.1",
     "secure-ls": "^1.2.6",
-    "valtio": "^1.5.2",
-    "web3modal": "^1.9.6"
+    "valtio": "^1.6.0",
+    "web3modal": "^1.9.7"
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
@@ -55,15 +49,15 @@
     "@preact/preset-vite": "^2.2.0",
     "@rollup/plugin-inject": "^4.0.4",
     "@typechain/ethers-v5": "^10.0.0",
-    "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
-    "@typescript-eslint/eslint-plugin": "^5.18.0",
-    "@typescript-eslint/parser": "^5.18.0",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
+    "@vitejs/plugin-react": "^1.3.1",
     "assert-browserify": "^2.0.0",
-    "autoprefixer": "^10.4.4",
+    "autoprefixer": "^10.4.5",
     "buffer": "^6.0.3",
     "cross-env": "^7.0.3",
-    "eslint": "^8.12.0",
+    "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-no-relative-import-paths": "^1.2.0",
@@ -71,16 +65,16 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
-    "eslint-plugin-valtio": "^0.4.2",
+    "eslint-plugin-valtio": "^0.4.4",
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "^5.0.1",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-visualizer": "^5.6.0",
-    "tailwindcss": "^3.0.23",
-    "tailwindcss-classnames": "^3.0.3",
-    "typechain": "^8.0.0",
+    "tailwindcss": "^3.0.24",
+    "tailwindcss-classnames": "^3.0.4",
     "typescript": "^4.6.3",
-    "vite": "^2.9.1",
+    "vite": "^2.9.5",
     "vite-tsconfig-paths": "^3.4.1"
   },
   "packageManager": "yarn@3.1.1"
