--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "preact": "^10.7.1",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^8.2.0",
+    "react-tooltip": "^4.2.21",
     "secure-ls": "^1.2.6",
     "valtio": "^1.6.0",
     "web3modal": "^1.9.7"
