--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ethers": "^5.6.4",
     "fortmatic": "^2.2.1",
     "preact": "^10.7.1",
+    "qr-code-styling": "^1.6.0-rc.1",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^8.2.0",
     "react-tooltip": "^4.2.21",
