--- a/package.json
+++ b/package.json
@@ -38,11 +38,11 @@
     "fortmatic": "^2.2.1",
     "preact": "^10.7.1",
     "qr-code-styling": "^1.6.0-rc.1",
-    "react-custom-scrollbars-2": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^8.2.0",
     "react-tooltip": "^4.2.21",
     "secure-ls": "^1.2.6",
+    "simplebar-react": "^2.3.7",
     "valtio": "^1.6.0",
     "web3modal": "^1.9.7"
   },
