Added scrollbar using the library

--- a/.env.sample
+++ b/.env.sample
@@ -2,7 +2,7 @@ VITE_ENCRYPT_KEY=123
 VITE_FORTMATIC_KEY=pk_test_123
 VITE_ETH_NETWORK=ropsten
 VITE_INFURA_ID=123
-VITE_APP_NAME=Seal-Cred
+VITE_APP_NAME=Street-Cred
 VITE_BITSKI_CLIENT_ID=123
 VITE_SC_LEDGER_CONTRACT_ADDRESS=0x6d638815402a6B2085ad9d6327C27d7796628851
-VITE_ETH_HTTP_URL=https://eth.sealcred.xyz
+VITE_ETH_HTTP_URL=https://eth.streetcred.one
