infura -> custom rpc

--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,8 @@
-VITE_ENCRYPT_KEY=123
-VITE_FORTMATIC_KEY=pk_test_123
-VITE_ETH_NETWORK=ropsten
-VITE_INFURA_ID=123
+VITE_ENCRYPT_KEY=000000000000000000000000000000000000000000
+VITE_FORTMATIC_KEY=pk_test_0000000000000000
 VITE_APP_NAME=Seal-Cred
-VITE_BITSKI_CLIENT_ID=123
-VITE_SC_LEDGER_CONTRACT_ADDRESS=0x6d638815402a6B2085ad9d6327C27d7796628851
-VITE_ETH_HTTP_URL=https://eth.sealcred.xyz
+VITE_ETH_NETWORK=rinkeby
+VITE_ETH_WS=wss://speedy-nodes-nyc.moralis.io/000000000000000000000000/eth/rinkeby/ws
+VITE_ETH_RPC=https://speedy-nodes-nyc.moralis.io/000000000000000000000000/eth/rinkeby
+VITE_BITSKI_CLIENT_ID=00000000-0000-0000-0000-000000000000
+VITE_SC_LEDGER_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
