--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     ]
   },
   "dependencies": {
+    "@big-whale-labs/poseidon": "^0.0.4",
     "@big-whale-labs/seal-cred-ledger-contract": "^0.0.2",
     "@coinbase/wallet-sdk": "^3.0.11",
     "@toruslabs/torus-embed": "^1.22.5",
