extracted the verification baseUrl for callProof to env

--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,4 @@ VITE_ETH_WS=wss://eth.example.com/ws
 VITE_ETH_RPC=https://eth.example.com/rpc
 VITE_BITSKI_CLIENT_ID=00000000-0000-0000-0000-000000000000
 VITE_SC_LEDGER_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+VITE_VERIFY_URL=https://eth.example.com
