--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@walletconnect/web3-provider": "^1.7.8",
     "@zk-kit/incremental-merkle-tree": "^0.4.3",
     "axios": "^0.27.2",
+    "envalid": "^7.3.1",
     "eth-rpc-errors": "^4.0.3",
     "ethers": "^5.6.6",
     "fortmatic": "^2.3.0",
