--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,15 +1,15 @@
 nodeLinker: node-modules
 
-plugins:
-  - path: .yarn/plugins/yarn-up-all-plugin.cjs
-    spec: 'https://github.com/e5mode/yarn-up-all/releases/download/1.1.0/index.js'
-
-npmRegistryServer: 'https://registry.npmjs.org'
+npmRegistryServer: "https://registry.npmjs.org"
 
 npmScopes:
   big-whale-labs:
     npmAlwaysAuth: true
-    npmAuthToken: ${NPM_AUTH_TOKEN:-}
-    npmRegistryServer: 'https://registry.npmjs.org'
+    npmAuthToken: "${NPM_AUTH_TOKEN:-}"
+    npmRegistryServer: "https://registry.npmjs.org"
 
-yarnPath: .yarn/releases/yarn-3.1.1.cjs
+plugins:
+  - path: .yarn/plugins/yarn-up-all-plugin.cjs
+    spec: "https://github.com/e5mode/yarn-up-all/releases/download/1.1.0/index.js"
+
+yarnPath: .yarn/releases/yarn-3.2.1.cjs
