fix types in external packages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,10 @@
     "jsx": "react-jsx",
     "jsxImportSource": "preact",
     "baseUrl": "src",
-    "types": ["vite/client"]
+    "types": ["vite/client"],
+    "paths": {
+      "react": ["../node_modules/preact/compat/"]
+    }
   },
   "include": ["src"]
 }
