Remove `@types/react` (#185)
* remove the types

* fix preact svg

* fix types in external packages

* revert preact/compat to react imports

Co-authored-by: Daniil Pankov <dpancov64@gmail.com>
Co-authored-by: Ruslan Zapevalov <upacyxou@tutanota.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,11 +14,14 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve",
-    "jsxFactory": "h",
-    "jsxFragmentFactory": "Fragment",
+    "jsx": "react-jsx",
+    "jsxImportSource": "preact",
     "baseUrl": "src",
-    "types": ["vite/client"]
+    "types": ["vite/client"],
+    "paths": {
+      "react": ["../node_modules/preact/compat/"],
+      "react-dom": ["./node_modules/preact/compat/"]
+    }
   },
   "include": ["src"]
 }
