--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "eth-rpc-errors": "^4.0.3",
     "ethers": "^5.6.6",
     "fortmatic": "^2.3.0",
-    "preact": "^10.7.2",
+    "preact": "https://github.com/preactjs/preact",
     "qr-code-styling": "^1.6.0-rc.1",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^9.0.1",
@@ -51,7 +51,6 @@
     "@preact/preset-vite": "^2.2.0",
     "@rollup/plugin-inject": "^4.0.4",
     "@typechain/ethers-v5": "^10.0.0",
-    "@types/react": "^17.0.43",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
     "@vitejs/plugin-react": "^1.3.2",
@@ -64,7 +63,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-no-relative-import-paths": "^1.3.3",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "eslint-plugin-valtio": "^0.4.4",
@@ -79,5 +78,5 @@
     "vite": "^2.9.9",
     "vite-tsconfig-paths": "^3.4.1"
   },
-  "packageManager": "yarn@3.1.1"
+  "packageManager": "yarn@3.2.1"
 }
