--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "types": ["vite/client"],
     "paths": {
       "react": ["../node_modules/preact/compat/"],
-      "react-dom": ["./node_modules/preact/compat/"]
+      "react-dom": ["../node_modules/preact/compat/"]
     }
   },
   "include": ["src"]
