--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "eth-rpc-errors": "^4.0.3",
     "ethers": "^5.6.6",
     "fortmatic": "^2.3.0",
-    "preact": "https://github.com/preactjs/preact",
+    "preact": "^10.7.2",
     "qr-code-styling": "^1.6.0-rc.1",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^9.0.1",
