--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@big-whale-labs/constants": "^0.0.8",
+    "@big-whale-labs/frontend-utils": "^0.0.1",
     "@big-whale-labs/poseidon": "^0.0.4",
     "@big-whale-labs/seal-cred-ledger-contract": "^0.0.3",
     "@coinbase/wallet-sdk": "^3.1.0",
