--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -1,19 +1,2 @@
-name: Compile and lint code
-
-on:
-  pull_request:
-    types: [synchronize, opened]
-
-jobs:
-  compile-code:
-    runs-on: ubuntu-latest
-    env:
-      NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install modules
-        run: yarn
-      - name: Compile code
-        run: yarn tsc --skipLibCheck
-      - name: Lint code
-        run: yarn lint
+- name: Build and lint code
+  uses: Borodutch/build-and-lint-code@v1.0.0
