--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -1,4 +1,7 @@
 name: Build and lint code
+on:
+  pull_request:
+    types: [synchronize, opened]
 jobs:
   build-and-lint-code:
     runs-on: ubuntu-latest
