--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "envalid": "^7.3.1",
     "eth-rpc-errors": "^4.0.3",
     "ethers": "^5.6.8",
+    "ffjavascript": "^0.2.55",
     "fortmatic": "^2.4.0",
     "preact": "^10.8.0",
     "qr-code-styling": "^1.6.0-rc.1",
