--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "tailwindcss-classnames": "^3.0.5",
     "typescript": "^4.7.3",
     "vite": "^2.9.12",
+    "vite-plugin-remove-console": "^1.0.0",
     "vite-tsconfig-paths": "^3.5.0"
   },
   "packageManager": "yarn@3.2.1"
