--- a/.env.sample
+++ b/.env.sample
@@ -3,4 +3,5 @@ VITE_APP_NAME=Seal-Cred
 VITE_ETH_NETWORK=rinkeby
 VITE_ETH_RPC=https://eth.example.com/rpc
 VITE_SC_LEDGER_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+VITE_SC_EMAIL_LEDGER_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
 VITE_VERIFY_URL=https://eth.example.com
