--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-router-dom": "^6.3.0",
     "react-toastify": "^9.0.5",
     "secure-ls": "^1.2.6",
+    "use-scroll-shadow": "^1.0.5",
     "valtio": "^1.6.1",
     "web3modal": "^1.9.8"
   },
