--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@coinbase/wallet-sdk": "^3.3.0",
     "@walletconnect/web3-provider": "^1.7.8",
     "axios": "^0.27.2",
+    "big-integer": "^1.6.51",
     "envalid": "^7.3.1",
     "eth-rpc-errors": "^4.0.3",
     "ethers": "^5.6.9",
