--- a/.env.sample
+++ b/.env.sample
@@ -3,6 +3,7 @@ VITE_APP_NAME=Seal-Cred
 VITE_ETH_NETWORK=rinkeby
 VITE_ETH_RPC=https://eth.example.com/rpc
 VITE_ETH_RPC_MAINNET=https://eth.example.com/rpc
+VITE_EXTERNAL_SC_ERC721_LEDGER_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
 VITE_SC_ERC721_LEDGER_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
 VITE_SC_EMAIL_LEDGER_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
 VITE_VERIFY_URL=https://eth.example.com
