--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@coinbase/wallet-sdk": "^3.3.0",
     "@walletconnect/web3-provider": "^1.7.8",
     "axios": "^0.27.2",
+    "entropy-string": "^4.2.0",
     "envalid": "^7.3.1",
     "eth-rpc-errors": "^4.0.3",
     "ethers": "^5.6.9",
@@ -50,6 +51,7 @@
     "@rollup/plugin-inject": "^4.0.4",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@typechain/ethers-v5": "^10.1.0",
+    "@types/entropy-string": "^4.2.0",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "@vitejs/plugin-react": "^1.3.2",
