--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@big-whale-labs/constants": "^0.1.9",
     "@big-whale-labs/seal-cred-ledger-contract": "^0.2.4",
     "@coinbase/wallet-sdk": "^3.3.0",
+    "@types/canvas-confetti": "^1.4.3",
     "@walletconnect/web3-provider": "^1.7.8",
     "axios": "^0.27.2",
+    "canvas-confetti": "^1.5.1",
     "entropy-string": "^4.2.0",
     "envalid": "^7.3.1",
     "eth-rpc-errors": "^4.0.3",
