--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@big-whale-labs/seal-cred-ledger-contract": "^0.2.6",
     "@coinbase/wallet-sdk": "^3.4.0",
     "@formkit/auto-animate": "^1.0.0-beta.1",
+    "@opengsn/provider": "^3.0.0-beta.1",
     "@walletconnect/web3-provider": "^1.8.0",
     "axios": "^0.27.2",
     "canvas-confetti": "^1.5.1",
@@ -57,7 +58,6 @@
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "@vitejs/plugin-react": "^2.0.0",
-    "assert-browserify": "^2.0.0",
     "autoprefixer": "^10.4.8",
     "cross-env": "^7.0.3",
     "eslint": "^8.21.0",
