--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "preview": "yarn build && yarn vite preview",
     "pretty": "prettier --check src",
     "lint": "yarn pretty && eslint --max-warnings 0 --ext ts,tsx,json src",
-    "postinstall": "yarn generate-css-types",
     "generate-css-types": "tailwindcss-classnames -o src/classnames/tailwind.ts && prettier --write src/classnames/tailwind.ts"
   },
   "browserslist": {
@@ -81,5 +80,8 @@
     "vite-plugin-remove-console": "^1.1.0",
     "vite-tsconfig-paths": "^3.5.0"
   },
-  "packageManager": "yarn@3.2.1"
+  "packageManager": "yarn@3.2.1",
+  "resolutions": {
+    "@opengsn/common@3.0.0-beta.1": "patch:@opengsn/common@npm:3.0.0-beta.1#.yarn/patches/@opengsn-common-npm-3.0.0-beta.1-79cb41f503.patch"
+  }
 }
