--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
+    "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
     "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@preact/preset-vite": "^2.3.0",
     "@rollup/plugin-inject": "^4.0.4",
@@ -71,7 +72,7 @@
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "react-scripts": "^5.0.1",
-    "rollup-plugin-node-polyfills": "^0.2.1",
+    "rollup-plugin-polyfill-node": "^0.10.2",
     "rollup-plugin-visualizer": "^5.7.1",
     "tailwindcss": "^3.1.7",
     "tailwindcss-classnames": "^3.0.5",
