--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -6,4 +6,6 @@ jobs:
   build-and-lint-code:
     runs-on: ubuntu-latest
     steps:
+      env:
+        NODE_OPTIONS: "--max_old_space_size=4096"
       - uses: Borodutch/build-and-lint-code@v1.0.3
