--- a/.env.sample
+++ b/.env.sample
@@ -7,4 +7,7 @@ VITE_ETH_RPC_MAINNET=https://eth.example.com/rpc
 VITE_EXTERNAL_SC_ERC721_LEDGER_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
 VITE_SC_ERC721_LEDGER_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
 VITE_SC_EMAIL_LEDGER_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+VITE_GSN_RELAY_MANAGER_ADDRESS=0x0000000000000000000000000000000000000000
+VITE_GSN_PAYMASTER_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+VITE_GSN_SC_RELAY=https://relay.example.com
 VITE_VERIFY_URL=https://eth.example.com
